# projeto

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  slides.py
.github/workflows/: ci.yml
app/: window_setup.py
app/controllers/: __init__.py  main_controller.py
app/db/: __init__.py  cargo_repository.py  config.py  port_repository.py  route_repository.py  ship_photo_repository.py  ship_repository.py  weather_repository.py
app/models/: simulator_model.py
app/utils/: photo_loader.py  resource_path.py  world_route_map.py
app/views/: cargonautica_constants.py  dashboard_view.py  screen10_view.py  screen11_view.py  screen1_view.py  screen2_view.py  screen3_view.py  ui_widgets.py
bd/: scriptBaseDados.sql  scriptSeedBaseDados.sql
imgs/: message.txt
