[project]
name = "desktop-app"
version = "0.1.0"
description = "Desktop app em Python"
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["."]
exclude = [".venv", "venv", ".git", ".cursor"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

